# simplechat

./: Cargo.toml  README.md
simplechat-client/: Cargo.toml
simplechat-client/src/: app.rs  main.rs  tui.rs
simplechat-client/src/components/: chat_history.rs  mod.rs  text_input.rs
simplechat-protocol/: Cargo.toml
simplechat-protocol/src/: codec.rs  lib.rs  model.rs  util.rs
simplechat-server/: Cargo.toml
simplechat-server/src/: main.rs
