[package]
name = "simplechat-client"
rust-version = "1.70"
authors.workspace = true
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm = { version = "0.27", features = ["event-stream"] }
futures.workspace = true
ratatui = "0.25"
simplechat-protocol.workspace = true
tokio.workspace = true
tokio-util.workspace = true
