[package]
name = "simplechat-protocol"
authors.workspace = true
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
base64 = "0.21"
thiserror.workspace = true
time = { version = "0.3", features = ["formatting"] }
tokio.workspace = true
tokio-util.workspace = true
